--- a/packages/api-server/package.json
+++ b/packages/api-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/api-server",
-  "version": "0.60.1",
+  "version": "0.60.2-alpha.0",
   "description": "",
   "license": "GPLv3",
   "repository": {
@@ -57,9 +57,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@dendronhq/common-all": "^0.60.1",
-    "@dendronhq/common-server": "^0.60.1",
-    "@dendronhq/engine-server": "^0.60.1",
+    "@dendronhq/common-all": "^0.60.2-alpha.0",
+    "@dendronhq/common-server": "^0.60.2-alpha.0",
+    "@dendronhq/engine-server": "^0.60.2-alpha.0",
     "@sentry/integrations": "^6.13.1",
     "@sentry/node": "^6.13.1",
     "cors": "^2.8.5",
