--- a/packages/pods-core/package.json
+++ b/packages/pods-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/pods-core",
-  "version": "0.60.2-alpha.0",
+  "version": "0.60.2",
   "description": "pods-core",
   "license": "GPLv3",
   "repository": {
@@ -49,9 +49,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@dendronhq/common-all": "^0.60.2-alpha.0",
-    "@dendronhq/common-server": "^0.60.2-alpha.0",
-    "@dendronhq/engine-server": "^0.60.2-alpha.0",
+    "@dendronhq/common-all": "^0.60.2",
+    "@dendronhq/common-server": "^0.60.2",
+    "@dendronhq/engine-server": "^0.60.2",
     "@instantish/martian": "^1.0.3",
     "@notionhq/client": "^0.1.9",
     "@octokit/graphql": "^4.6.4",
