--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -51,7 +51,7 @@
         },
         {
           "id": "dendron.calendar-view",
-          "name": "Calendar",
+          "name": "Calendar View",
           "type": "webview"
         },
         {
@@ -79,7 +79,8 @@
       {
         "command": "dendron.backlinks.expandAll",
         "title": "Expand All",
-        "icon": "$(expand-all)"
+        "icon": "$(expand-all)",
+        "desc": "Expand all backlinks"
       },
       {
         "command": "dendron.browseNote",
@@ -139,7 +140,8 @@
       {
         "command": "dendron.insertNoteIndex",
         "title": "Dendron: Insert Note Index",
-        "desc": "Insert note index"
+        "desc": "Insert note index",
+        "when": "editorFocus && dendron:pluginActive"
       },
       {
         "command": "dendron.moveNote",
@@ -164,16 +166,30 @@
         "desc": "Rename a header, and update all links to it."
       },
       {
+        "command": "dendron.convertLink",
+        "title": "Dendron: Convert Link",
+        "desc": "Convert link candidate into backlink"
+      },
+      {
         "command": "dendron.lookupNote",
-        "title": "Dendron: Lookup Note",
+        "title": "Dendron: Lookup",
         "desc": "Initiate note lookup",
+        "docLink": "dendron.topic.lookup.md",
+        "docPreview": "",
+        "when": "dendron:pluginActive"
+      },
+      {
+        "command": "dendron.lookupNote",
+        "title": "Dendron: Lookup",
+        "desc": "Initiate note lookup",
+        "docLink": "dendron.topic.lookup.md",
+        "docPreview": "",
         "when": "dendron:pluginActive"
       },
       {
         "command": "dendron.lookupSchema",
         "title": "Dendron: Lookup Schema",
         "desc": "Initiate schema lookup",
-        "when": "dendron:pluginActive",
         "docLink": "dendron.topic.lookup.md",
         "docPreview": "![](https://foundation-prod-assetspublic53c57cce-8cpvgjldwysl.s3-us-west-2.amazonaws.com/assets/images/schema-lookup.gif)"
       },
@@ -448,6 +464,30 @@
         "docPreview": ""
       },
       {
+        "command": "dendron.seedAdd",
+        "title": "Dendron: Add Seed to Workspace",
+        "desc": "Add a seed to the current workspace",
+        "docs": "",
+        "docLink": "",
+        "docPreview": ""
+      },
+      {
+        "command": "dendron.seedRemove",
+        "title": "Dendron: Remove Seed from Workspace",
+        "desc": "Remove a seed from the current workspace",
+        "docs": "",
+        "docLink": "",
+        "docPreview": ""
+      },
+      {
+        "command": "dendron.seedBrowse",
+        "title": "Dendron: Browse the Seed Registry",
+        "desc": "Browse and Add seeds from the Registry to the current workspace",
+        "docs": "",
+        "docLink": "",
+        "docPreview": ""
+      },
+      {
         "command": "dendron.dev.doctor",
         "title": "Dendron: Doctor",
         "desc": "Auto fix issues with frontmatter",
@@ -489,21 +529,6 @@
         "command": "dendron.launchTutorial",
         "title": "Dendron: Launch Tutorial",
         "desc": "Launch the Tutorial"
-      },
-      {
-        "command": "dendron.seedAdd",
-        "title": "Dendron: Seed Add",
-        "desc": "Add Seed to Current Workspace"
-      },
-      {
-        "command": "dendron.seedRemove",
-        "title": "Dendron: Seed Remove",
-        "desc": "Remove Seed from Current Workspace"
-      },
-      {
-        "command": "dendron.seedBrowse",
-        "title": "Dendron: Seed Browse",
-        "desc": "Browse the Seed Registry and Add Seeds to Current Workspace"
       }
     ],
     "menus": {
@@ -540,14 +565,14 @@
           "command": "dendron.moveNote",
           "group": "2_workspace"
         }
-      ] ,
+      ],
       "editor/context": [
         {
           "when": "editorHasSelection && dendron:pluginActive",
           "command": "dendron.renameHeader",
           "group": "2_workspace"
-        } 
-      ]  
+        }
+      ]
     },
     "configuration": {
       "title": "dendron",
@@ -720,6 +745,11 @@
         "mac": "cmd+L",
         "key": "ctrl+l",
         "when": "dendron:pluginActive"
+      },
+      {
+        "command": "dendron.lookupNote",
+        "key": "ctrl+l",
+        "when": "dendron:pluginActive && editorTextFocus && vim.active"
       },
       {
         "command": "dendron.lookupNote",
