--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -172,15 +172,7 @@
       },
       {
         "command": "dendron.lookupNote",
-        "title": "Dendron: Lookup",
-        "desc": "Initiate note lookup",
-        "docLink": "dendron.topic.lookup.md",
-        "docPreview": "",
-        "when": "dendron:pluginActive"
-      },
-      {
-        "command": "dendron.lookupNote",
-        "title": "Dendron: Lookup",
+        "title": "Dendron: Lookup Note",
         "desc": "Initiate note lookup",
         "docLink": "dendron.topic.lookup.md",
         "docPreview": "",
@@ -745,11 +737,6 @@
         "mac": "cmd+L",
         "key": "ctrl+l",
         "when": "dendron:pluginActive"
-      },
-      {
-        "command": "dendron.lookupNote",
-        "key": "ctrl+l",
-        "when": "dendron:pluginActive && editorTextFocus && vim.active"
       },
       {
         "command": "dendron.lookupNote",
